# MusicEngine

./: CMakeLists.txt
lua/: logic.lua  rules.lua  setup.lua
src/: MIDI.cpp  MIDI.h  MIDIFileLoading.cpp  MelodyMaker.cpp  MelodyMaker.h  MusicEngine.cpp  MusicMaker.cpp  MusicMaker.h
src/algo/: BestOrder.h  ChordDetector.h  KeyDetector.h  SimilarityAlgos.h
src/data/: DrumPattern.h  Event.h  Instrument.h  MarkovChain.h  Scale.h
src/game/: GameBridge.cpp  GameBridge.h  GameData.h  GameStateHandler.cpp  Rule.h
src/gui/: GUI.cpp  GUI.h  GUILogger.h  GUIMusicGen.cpp  GUIRuleDef.cpp  GUITitleScreen.cpp
src/lua/: LuaBindings.cpp  LuaRuleValidation.h  ValidLiterals.h
src/util/: Debug.h  Timing.h  Util.h
test/: PerformanceTesting.cpp
